--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnumClass.cs" />
+    <Compile Include="IBasePresentor.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Form1.cs">
