--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ISaveExcel.cs" />
     <Compile Include="ISavePDF.cs" />
     <Compile Include="Publisher.cs" />
+    <Compile Include="SaveException.cs" />
     <Compile Include="SaveExcel.cs" />
     <Compile Include="SavePDF.cs" />
     <Compile Include="Program.cs" />
