--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -60,6 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBUtils.cs" />
+    <Compile Include="ForeignKey.cs" />
+    <Compile Include="IForeignKey.cs" />
+    <Compile Include="IGetDB.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
