--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="ISaveExcel.cs" />
     <Compile Include="ISavePDF.cs" />
+    <Compile Include="Presentor.cs" />
     <Compile Include="Publisher.cs" />
     <Compile Include="SaveException.cs" />
     <Compile Include="SaveExcel.cs" />
