--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBUtils.cs" />
+    <Compile Include="ErrorListener.cs" />
     <Compile Include="IGetDB.cs" />
     <Compile Include="EnumClass.cs" />
     <Compile Include="IBasePresentor.cs" />
@@ -82,7 +83,6 @@
     <Compile Include="ISaveExcel.cs" />
     <Compile Include="ISavePDF.cs" />
     <Compile Include="Presentor.cs" />
-    <Compile Include="Publisher.cs" />
     <Compile Include="SaveExcel.cs" />
     <Compile Include="SavePDF.cs" />
     <Compile Include="Program.cs" />
