доработка презентора и вью

--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -71,6 +71,7 @@
     <Compile Include="IGetDB.cs" />
     <Compile Include="EnumClass.cs" />
     <Compile Include="IBasePresentor.cs" />
+    <Compile Include="IModel.cs" />
     <Compile Include="IStudent.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="Model.cs" />
