--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -66,14 +66,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomString.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="ErrorListener.cs" />
+    <Compile Include="ICustomString.cs" />
     <Compile Include="IGetDB.cs" />
     <Compile Include="EnumClass.cs" />
     <Compile Include="IBasePresentor.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IStudent.cs" />
     <Compile Include="IView.cs" />
+    <Compile Include="IYandexTranslate.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -89,6 +92,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="YandexTranslate.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
