--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -66,15 +66,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="City.cs" />
-    <Compile Include="CityName.cs" />
-    <Compile Include="CityUtils.cs" />
+    <Compile Include="Weather\City.cs" />
+    <Compile Include="Weather\CityName.cs" />
+    <Compile Include="Weather\CityUtils.cs" />
     <Compile Include="Constant.cs" />
-    <Compile Include="CustomString.cs" />
+    <Compile Include="Translate\CustomString.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="ErrorListener.cs" />
-    <Compile Include="GetWeather.cs" />
-    <Compile Include="IGetWeather.cs" />
+    <Compile Include="Weather\GetWeather.cs" />
+    <Compile Include="Weather\IGetWeather.cs" />
     <Compile Include="Interface_\ICustomString.cs" />
     <Compile Include="Interface_\IGetDB.cs" />
     <Compile Include="EnumClass.cs" />
@@ -93,14 +93,14 @@
     <Compile Include="Interface_\ISaveExcel.cs" />
     <Compile Include="Interface_\ISavePDF.cs" />
     <Compile Include="Presentor_\Presentor.cs" />
-    <Compile Include="SaveExcel.cs" />
-    <Compile Include="SavePDF.cs" />
+    <Compile Include="Save\SaveExcel.cs" />
+    <Compile Include="Save\SavePDF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model_\Student.cs" />
     <Compile Include="Utils.cs" />
-    <Compile Include="Weather.cs" />
-    <Compile Include="YandexTranslate.cs" />
+    <Compile Include="Weather\Weather.cs" />
+    <Compile Include="Translate\YandexTranslate.cs" />
     <EmbeddedResource Include="View_\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -128,10 +128,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Database.mdf">
+    <Content Include="Model_\Database.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Database_log.ldf">
+    <Content Include="Model_\Database_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
