--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -84,11 +84,11 @@
     <Compile Include="Interface_\IView.cs" />
     <Compile Include="Interface_\IYandexTranslate.cs" />
     <Compile Include="Model_\Model.cs" />
-    <Compile Include="View_\Form1.cs">
+    <Compile Include="View_\MainView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View_\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View_\MainView.Designer.cs">
+      <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface_\ISaveExcel.cs" />
     <Compile Include="Interface_\ISavePDF.cs" />
@@ -101,8 +101,8 @@
     <Compile Include="Utils.cs" />
     <Compile Include="Weather\Weather.cs" />
     <Compile Include="Translate\YandexTranslate.cs" />
-    <EmbeddedResource Include="View_\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="View_\MainView.resx">
+      <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
