--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -68,18 +68,19 @@
   <ItemGroup>
     <Compile Include="Model_\Faculty.cs" />
     <Compile Include="Model_\University.cs" />
+    <Compile Include="Enum\NameCity.cs" />
     <Compile Include="Weather\City.cs" />
     <Compile Include="Weather\CityName.cs" />
     <Compile Include="Weather\CityUtils.cs" />
     <Compile Include="Constant.cs" />
-    <Compile Include="Translate\CustomString.cs" />
+    <Compile Include="Translate\UserString.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="ErrorListener.cs" />
     <Compile Include="Weather\GetWeather.cs" />
     <Compile Include="Weather\IGetWeather.cs" />
-    <Compile Include="Interface_\ICustomString.cs" />
+    <Compile Include="Interface_\IUserString.cs" />
     <Compile Include="Interface_\IGetDB.cs" />
-    <Compile Include="EnumClass.cs" />
+    <Compile Include="Enum\Language.cs" />
     <Compile Include="Interface_\IBasePresentor.cs" />
     <Compile Include="Interface_\IModel.cs" />
     <Compile Include="Interface_\IStudent.cs" />
