--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -66,20 +66,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBSQLServerUtils.cs" />
-    <Compile Include="IRequest.cs" />
+    <Compile Include="Request\DBSQLServerUtils.cs" />
+    <Compile Include="Interface_\IRequest.cs" />
     <Compile Include="Model_\Faculty.cs" />
     <Compile Include="Model_\University.cs" />
     <Compile Include="Enum\NameCity.cs" />
-    <Compile Include="RequestStudent.cs" />
-    <Compile Include="RequestUniversity.cs" />
+    <Compile Include="Request\RequestStudent.cs" />
+    <Compile Include="Request\RequestUniversity.cs" />
     <Compile Include="Weather\City.cs" />
     <Compile Include="Weather\CityName.cs" />
     <Compile Include="Weather\CityUtils.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="Translate\UserString.cs" />
     <Compile Include="DBUtils.cs" />
-    <Compile Include="ErrorListener.cs" />
+    <Compile Include="Interface_\ErrorListener.cs" />
     <Compile Include="Weather\GetWeather.cs" />
     <Compile Include="Weather\IGetWeather.cs" />
     <Compile Include="Interface_\IUserString.cs" />
