--- a/GGB/GGB/GGB.csproj
+++ b/GGB/GGB/GGB.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Model_\Faculty.cs" />
     <Compile Include="Model_\University.cs" />
     <Compile Include="Enum\NameCity.cs" />
+    <Compile Include="Test\TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Test\TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Weather\City.cs" />
     <Compile Include="Weather\CityName.cs" />
     <Compile Include="Weather\CityUtils.cs" />
@@ -104,6 +110,9 @@
     <Compile Include="Utils.cs" />
     <Compile Include="Weather\Weather.cs" />
     <Compile Include="Translate\YandexTranslate.cs" />
+    <EmbeddedResource Include="Test\TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View_\MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
